crates/parser/src/snapshots/parser__tests__parse_inline_err@0028_let_rec_part_no_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "letrec { foo :=   } foo\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0028_let_rec_part_no_expr.ath
---
LET_REC_EXPR
  LETREC_KW "letrec"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  LET_REC_PART
    IDENTIFIER
      IDENT "foo"
      WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE "   "
  R_CURLY "}"
  WHITESPACE " "
  IDENT_EXPR
    IDENTIFIER
      IDENT "foo"
      WHITESPACE "\n"
error 18: Expected to find an expression for the letrec binding

