crates/parser/src/snapshots/parser__tests__parse_inline_err@0029_let_rec_expr_no_binding.ath.snap
---
source: crates/parser/src/tests.rs
description: "letrec {  } foo\n"
input_file: crates/parser/test_data/parser/inline/err/expr/0029_let_rec_expr_no_binding.ath
---
LET_REC_EXPR
  LETREC_KW "letrec"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE "  "
  R_CURLY "}"
  WHITESPACE " "
  IDENT_EXPR
    IDENTIFIER
      IDENT "foo"
  WHITESPACE "\n"
error 8: Expected to find at least one binding for the letrec expression

