crates/parser/src/snapshots/parser__tests__parse_inline_err@0034_var_pat_no_sort.ath.snap
---
source: crates/parser/src/tests.rs
description: "?foo:\n"
input_file: crates/parser/test_data/parser/inline/err/pat/0034_var_pat_no_sort.ath
---
VAR_PAT
  QUESTION "?"
  IDENTIFIER
    IDENT "foo"
  COLON ":"
  WHITESPACE "\n"
error 6: expected a sort annotation

