crates/parser/src/snapshots/parser__tests__parse_inline_err@0035_var_pat_no_ident.ath.snap
---
source: crates/parser/src/tests.rs
description: "? :Int\n"
input_file: crates/parser/test_data/parser/inline/err/pat/0035_var_pat_no_ident.ath
---
VAR_PAT
  QUESTION "?"
  WHITESPACE " "
  COLON ":"
  IDENT_SORT
    IDENTIFIER
      IDENT "Int"
      WHITESPACE "\n"
error 2: expected an identifier

