crates/parser/src/snapshots/parser__tests__parse_inline_err@0036_named_bind_pat_no_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "(bind foo )\n"
input_file: crates/parser/test_data/parser/inline/err/pat/0036_named_bind_pat_no_pat.ath
---
NAMED_PAT
  L_PAREN "("
  BIND_KW "bind"
  WHITESPACE " "
  NAME
    IDENT "foo"
  WHITESPACE " "
  R_PAREN ")"
  WHITESPACE "\n"
error 9: expected a pattern to bind to

