crates/parser/src/snapshots/parser__tests__parse_inline_err@0038_val_of_pat_no_pat.ath.snap
---
source: crates/parser/src/tests.rs
description: "(val-of )\n"
input_file: crates/parser/test_data/parser/inline/err/pat/0038_val_of_pat_no_pat.ath
---
VAL_OF_PAT
  L_PAREN "("
  VAL_OF_KW "val-of"
  WHITESPACE " "
  R_PAREN ")"
  WHITESPACE "\n"
error 7: expected an identifier as part of the `val-of` pattern

